--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prisma": "^4.16.1"
   }
 }
